--- a/backend/payment-service/package.json
+++ b/backend/payment-service/package.json
@@ -5,13 +5,15 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon ./src/index.js"
+    "start": "node ./src/index.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
     "amqplib": "^0.8.0",
-    "mongoose": "^6.1.6"
+    "axios": "^0.25.0",
+    "mongoose": "^6.1.6",
+    "nodemon": "^2.0.15"
   }
 }
