--- a/backend/orders-service/package.json
+++ b/backend/orders-service/package.json
@@ -12,7 +12,9 @@
   "license": "ISC",
   "dependencies": {
     "amqplib": "^0.8.0",
+    "axios": "^0.25.0",
     "bcrypt": "^5.0.1",
+    "cors": "^2.8.5",
     "dotenv": "^11.0.0",
     "express": "^4.17.2",
     "express-async-handler": "^1.2.0",
