--- a/backend/api-gateway-service/package.json
+++ b/backend/api-gateway-service/package.json
@@ -14,6 +14,7 @@
     "cors": "^2.8.5",
     "dotenv": "^14.2.0",
     "express": "^4.17.2",
-    "express-http-proxy": "^1.6.3"
+    "express-http-proxy": "^1.6.3",
+    "nodemon": "^2.0.15"
   }
 }
